kubernetes-szkolenie/k8s/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis-deployment
  labels:
    app: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis:7.0-alpine
        ports:
        - containerPort: 6379
        # resources:
        #   limits:
        #     memory: "256Mi"
        #     cpu: "500m"
        #   requests:
        #     memory: "128Mi"
        #     cpu: "250m"
