kubernetes-szkolenie/k8s/worker-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
        - name: worker
          image: docker-compose-template-worker:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 7860
          # resources:
          #   limits:
          #     memory: "512Mi"
          #     cpu: "500m"
          #   requests:
          #     memory: "512Mi"
          #     cpu: "500m"
