kubernetes-szkolenie/k8s/api-service.yml
apiVersion: v1
kind: Service
metadata:
 name: api
spec:
 type: NodePort
 selector:
   app: api
 ports:
   - port: 7860
     targetPort: 7860
     nodePort: 30080
